--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     --normal-font-size: clamp(1.25rem, 3vw, 1.5rem);
     --navbar-height: max(4.5rem, 6vw);
     --navbar-hpos: 70vh;
+    --navbar-offset: .5rem;
 }
 
 html {
@@ -67,14 +68,20 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: var(--navbar-hpos);
-    top: 0;
+    top: calc(var(--navbar-offset) + .25rem);
     width: 100vw;
     height: var(--navbar-height);
     z-index: 99;
-    transition: background-color .25s;
 }
 .nav-scrolled{
     background-color: black;
+    box-shadow: 0px 0px 8px rgba(0,0,0,.75);
+}
+.navbarBack{
+    height: 100%;
+    padding: var(--navbar-offset);
+    transition: background-color .25s, box-shadow .25s;
+    border-radius: .75rem;
 }
 
 .navbar a {
@@ -84,6 +91,14 @@ body {
 
 .navbar img {
     height: 100%;
+}
+
+.backToTopBtn {
+    z-index: 9999;
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    image-rendering: pixelated;
 }
 
 .background {
