--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,18 @@ html {
 body {
     scroll-behavior: smooth;
     scroll-padding-top: var(--navbar-height);
-    background: url("pageBackground.png") currentColor;
     margin: 0;
     background-size: 200vh;
     image-rendering: pixelated;
+}
+
+#wrapper {
+    scroll-behavior: smooth;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .backgroundelementbecausefuckmylife {
@@ -53,7 +61,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: inherit;
     z-index: 0;
     -webkit-user-drag: none;
     -moz-user-select: none;
@@ -130,7 +138,11 @@ body {
 .ground {
     position: absolute;
     bottom: 0vh;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
+    background-repeat: repeat-x;
+    background-image: url('forground.png');
+    background-size: 200vh;
     object-fit: cover;
 }
 
@@ -138,7 +150,7 @@ body {
 .background,
 .foreground {
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 100vw;
     object-fit: cover;
     -webkit-user-drag: none;
