--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
     align-items: center;
     opacity: 0;
     transition: opacity .25s, visibility .25s;
+    height: 100%;
 }
 
 .showbackbutt {
