--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
     --normal-font-size: clamp(1.25rem, 3vw, 1.5rem);
-    --navbar-height: max(3rem, 6vw);
+    --navbar-height: max(3rem, 5vw);
     --navbar-hpos: 70vh;
     --navbar-offset: .5rem;
     --fixedElement-offset: 100vh;
@@ -72,7 +72,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh + 1rem);
 }
 
 .titlelogo img {
