--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,11 @@ body {
     object-fit: cover;
 }
 
+#everything {
+    position: relative;
+    bottom: -.09px;
+    margin-top: calc(100vh - var(--navbar-height) - var(--navbar-hpos));
+}
 
 .background,
 .foreground {
@@ -176,7 +181,7 @@ p {
     text-align: center;
 }
 
-.aboutVideo{
+.aboutVideo {
     width: 99%;
     height: 50vh;
 }
@@ -186,8 +191,7 @@ p {
     font-size: var(--normal-font-size);
     color: white;
     background-color: black;
-    height: 100vh;
-    margin-top: calc(100vh - var(--navbar-height) - var(--navbar-hpos));
+
     overflow-x: hidden;
     flex-direction: column;
     align-items: center;
