--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,8 @@ p {
     font-size: var(--normal-font-size);
     font-family: 'Varela Round', sans-serif;
     text-align: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .aboutVideo {
