--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,10 @@ btn {
 
 .gradientText {
     background: linear-gradient(to right, var(--dark-orange), var(--bright-yellow));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+    /*-webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;*/
 }
 
 .backToTopBtn {
