--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,11 @@ btn {
     cursor: pointer;
 }
 
-.gradientText {
+.gradient-text {
     background: linear-gradient(to right, var(--dark-orange), var(--bright-yellow));
     background-clip: text;
     color: transparent;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
 
 .backToTopBtn {
