--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ btn {
 }
 
 .gradient-text {
-    background: linear-gradient(to right, var(--dark-orange), var(--bright-yellow));
+    background-image: linear-gradient(to right, var(--dark-orange), var(--bright-yellow));
     background-clip: text;
     color: transparent;
     -webkit-background-clip: text;
