--- a/styles.css
+++ b/styles.css
@@ -547,7 +547,7 @@ p {
     grid-gap: .5rem;
 }
 
-.artGrid div {
+.artGridItem {
     box-shadow: 0rem 0rem 0rem 0rem black;
     display: flex;
     width: 100%;
@@ -555,10 +555,26 @@ p {
     background-color: grey;
     border-radius: 1rem;
     transition: transform .5s, box-shadow 0s;
+    height: 100%;
+}
+
+.artGridItem img {
+    box-shadow: inset 0rem 0rem .5rem .5rem rgba(0, 0, 0, .5);
+    display: block;
+    width: 90%;
+    align-self: center;
+    margin-top: 1rem;
+    cursor: pointer;
+    aspect-ratio: 1;
+    object-fit: cover;
+}
+
+.artGridItem:hover img{
+    background-size: 100%;
 }
 
 @media (orientation: landscape) {
-    .artGrid div:hover {
+    .artGridItem:hover {
         box-shadow: 0rem 0rem .5rem .5rem rgba(0, 0, 0, .5);
         display: flex;
         width: 100%;
@@ -568,13 +584,20 @@ p {
         transform: scale(115%);
         z-index: 10;
     }
-}
-
-.artGrid div img {
-    width: 90%;
-    align-self: center;
-    margin-top: 1rem;
-    cursor: pointer;
+    .artGridItem img {
+        box-shadow: inset 0rem 0rem .5rem .25rem rgba(0, 0, 0, .5);
+        display: block;
+        width: 90%;
+        align-self: center;
+        margin-top: 1rem;
+        cursor: pointer;
+        aspect-ratio: 1;
+        object-fit: cover;
+        object-position: 100vw;
+        background-size: 120%;
+        background-position: center;
+        transition: background-size .5s;
+    }
 }
 
 /*}*/
@@ -591,20 +614,22 @@ p {
     justify-content: center;
     flex-direction: column;
 }
-.ccf{
+
+.ccf {
     color: white;
     margin-top: 2rem;
 }
-.reallycoolclosebtn{
+
+.reallycoolclosebtn {
     position: absolute;
     top: 1rem;
     left: 1rem;
     height: var(--navbar-height);
-    width:auto;
+    width: auto;
     cursor: pointer;
 }
 
-.popupimg .theimg{
+.popupimg .theimg {
     border: 3px;
     border-style: solid;
     border-color: var(--dark-orange);
@@ -614,15 +639,15 @@ p {
 }
 
 @media (orientation: portrait) {
-    .reallycoolclosebtn{
+    .reallycoolclosebtn {
         position: absolute;
         top: 8px;
         left: 0px;
         height: var(--navbar-height);
-        width:auto;
+        width: auto;
     }
 
-    .popupimg .theimg{
+    .popupimg .theimg {
         height: auto;
         width: 75vw;
     }
