--- a/styles.css
+++ b/styles.css
@@ -569,8 +569,12 @@ p {
     object-fit: cover;
 }
 
-.artGridItem:hover img{
-    background-size: 100%;
+.artGridItem:hover .verticalArt{
+    background-size: 100% auto;
+}
+
+.artGridItem:hover .horizontalArt{
+    background-size: auto 100%;
 }
 
 @media (orientation: landscape) {
@@ -594,9 +598,14 @@ p {
         aspect-ratio: 1;
         object-fit: cover;
         object-position: 100vw;
-        background-size: 120%;
         background-position: center;
         transition: background-size .5s;
+    }
+    .horizontalArt{
+        background-size: auto 120%;
+    }
+    .verticalArt{
+        background-size: 120% auto;
     }
 }
 
