--- a/styles.css
+++ b/styles.css
@@ -378,6 +378,7 @@ p {
         grid-template-rows: 1fr;
         align-items: center;
         justify-items: center;
+        margin-right: 3vw;
     }
 
     .pfpinaboutholder {
